--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,6 @@
     <p>I want to be a good website developer</p>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX image</a>
     <p>I want to be a good citizen</p>
+    <a href="./tweets.html">Tweets</a>
 </body>
 </html>
