--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,16 +6,44 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>My Name</h1>
-    <p>Achilike Justice</p>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./tweets.html">Tweets</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <h2>My Gender</h2>
-    <p>Male</p>
+    <main>
 
-    <h3>My Dream</h3>
-    <p>I want to be a good website developer</p>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX image</a>
-    <p>I want to be a good citizen</p>
-    <a href="./tweets.html">Tweets</a>
+        <article>
+            <h1>My Name</h1>
+            <p>Achilike Justice</p>
+
+            <h2>My Gender</h2>
+            <p>Male</p>
+
+            <h3>My Dream</h3>
+            <p>I want to be a good website developer</p>
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX image</a>
+            <p>I want to be a good citizen</p>
+            <a href="./tweets.html">Tweets</a>
+        </article>
+
+        <aside>
+            <p>
+                Placeholder to add comment thread later
+            </p>
+        </aside>
+
+    </main>
+
+    <footer>
+        <p>
+            Made by Achilike Justice <a href="https://x.com/ArchieJK9" target="_blank" rel="noopener">here</a>
+        </p>
+    </footer>
 </body>
 </html>
