--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -15,6 +15,12 @@
                 </li>
             </ul>
         </nav>
+        <main>
+
+        </main>
+        <footer>
+            
+        </footer>
     </header>
 
     <main>
