--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,75 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achilike Justice - Personal Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Achilike Justice - Personal Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1>Achilike Justice</h1>
-        <p>
-            Frontend Web Developer crafting modern, responsive, and user-friendly interfaces.
-        </p>
-    </header>
 
-    <nav>
-        <ul>
-            <li><a href="#index">Introduction</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+  <header>
+    <h1>Achilike Justice</h1>
+    <p>Frontend Web Developer crafting modern, responsive, and user-friendly interfaces.</p>
+  </header>
 
-    <section id="introducion">
-        <h2>
-            Introduction
-        </h2>
-        <>
-            Hello! I’m Achilike Justice Kelechi, 
-            a passionate frontend web developer focused on building accessible, 
-            user-first web experiences using HTML, CSS, and JavaScript. 
-            I enjoy solving real-world problems through code and continuous learning.
-        </p>
-    </section>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <section id="project">
-        <h2>Projects</h2>
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>
+      Hello! I’m Achilike Justice Kelechi, a passionate frontend web developer focused on building accessible, 
+      user-first web experiences using HTML, CSS, and JavaScript. I enjoy solving real-world problems through 
+      code and continuous learning.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
 
     <article class="project">
       <h3>Crowdfunding Product Page</h3>
       <p>
-          A responsive crowdfunding page built, showcasing the fictional Mastercraft Bamboo Monitor Riser. 
-          It features interactive pledge options, real-time funding updates, modal popups, and a clean, 
-          mobile-friendly design.
-          Built with HTML, CSS, and JavaScript to demonstrate dynamic UI interaction 
-          and responsive layout skills.
+        A responsive crowdfunding page built to showcase the fictional Mastercraft Bamboo Monitor Riser. 
+        It features interactive pledge options, real-time funding updates, modal popups, and a clean, 
+        mobile-friendly design. Built with HTML, CSS, and JavaScript to demonstrate dynamic UI interaction 
+        and responsive layout skills.
       </p>
       <a href="https://archiek9.github.io/crowdfunding-product-page-main/" target="_blank" rel="noopener">
-          View Project
+        View Project
       </a>
     </article>
 
     <article class="project">
       <h3>Age Calculator App</h3>
       <p>
-        The Age Calculator App is a responsive web tool that calculates a user's exact age in years, months, and 
-        days based on their birth date. It features a clean UI, real-time input validation, 
-        and precise date calculations.
-        This project demonstrates my skills in form handling, JavaScript date manipulation, 
-        and responsive design.
+        A responsive tool that calculates a user's exact age in years, months, and days based on birth date. 
+        Includes a clean UI, real-time validation, and precise date calculations. Demonstrates my skills 
+        in form handling, JavaScript logic, and responsive design.
       </p>
       <a href="https://archiek9.github.io/age-calculator-app/" target="_blank" rel="noopener">
         View Project
       </a>
     </article>
 
-    </section>
+  </section>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a frontend developer</p>
+    <p>I am a frontend developer passionate about creating engaging user interfaces.</p>
     <p>My technical skills include:</p>
     <ul>
       <li>HTML, CSS, JavaScript</li>
@@ -90,9 +83,9 @@
     </ul>
   </section>
 
-
   <footer>
-    <p>Made by Achilike Justice Kelechi - <a href="https://github.com/ArchieK9" target="_blank" rel="noopener">here</a>.</p>
+    <p>&copy; 2024 Achilike Justice Kelechi - <a href="https://github.com/ArchieK9" target="_blank" rel="noopener">here</a>.</p>
   </footer>
+
 </body>
 </html>
